# SimpleNeuralNetworkCpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_simple.sh
examples/anim/: CMakeLists.txt
examples/anim/src/: anim_file.cpp  anim_file.h  main.cpp
examples/car_learning/: CMakeLists.txt
examples/car_learning/src/: main.cpp
examples/car_learning_sdl2/: CMakeLists.txt
examples/car_learning_sdl2/src/: car_simulator.cpp  car_simulator.h  main.cpp
examples/example1/: CMakeLists.txt  build_simple.sh
examples/example1/src/: main.cpp
examples/kiobbot_sin/: CMakeLists.txt
examples/kiobbot_sin/src/: main.cpp
examples/mesh_calc_tangents/: CMakeLists.txt  data.txt
examples/mesh_calc_tangents/src/: CalcTangentSimpleNeuralNetwork.cpp  CalcTangentSimpleNeuralNetwork.h  main.cpp
examples/sum_numbers/: CMakeLists.txt  data.txt
examples/sum_numbers/src/: main.cpp  test_sum_numbers_func.h
src/: KiobBot.cpp  KiobBot.h  SimpleNeuralNetwork.cpp  SimpleNeuralNetwork.h  main.cpp
tests/: CMakeLists.txt  test_calc_neural_network.cpp  test_genom_count.cpp
